# narya-pygments

./: README.md  pyproject.toml
narya_pygments/: __init__.py  lexer.py  narya_lexer.py
