# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narya-pygments"
version = "0.1.0"
description = "Pygments lexer for the Narya programming language"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pygments>=2.4.0"]

[project.entry-points."pygments.lexers"]
narya = "narya_pygments.lexer:NaryaLexer"

[tool.setuptools]
packages = ["narya_pygments"]