[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "narya-pygments"
version = "0.1.0"
authors = [
    { name = "Danielle Goldman", email = "daniellegoldm@gmail.com" }
]
description = "Pygments lexer for the Narya programming language"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygments>=2.19.0"
]

[project.entry-points."pygments.lexers"]
narya = "narya_pygments.lexer:NaryaLexer"